# var

./: README.md
Project1/Assets/: Door.cs  grab.cs  put.cs
Project1/Assets/Materials/Materials/: BlackButton.mat  BlueButton.mat  BlueDoor.mat  BrownButton.mat  BrownDoor.mat  GreenButton.mat  GreenDoor.mat  Pedestal.mat  RedButton.mat  RedDoor.mat  Sconce.mat  WhiteButton.mat  WoodFlooring044_COL_3K.mat  WoodFlooring044_DISP16_3K.mat  WoodFlooring044_DISP_3K.mat  WoodFlooring044_GLOSS_3K.mat  WoodFlooring044_NRM16_3K.mat  WoodFlooring044_NRM_3K.mat  WoodFlooring044_REFL_3K.mat  YellowButton.mat  YellowDoor.mat  ceiling.mat
Project1/Assets/Materials/Materials/WallMedieval003/: Wall.mat
Project1/Assets/Materials/Textures/: ceiling.mat  tiles.mat
Project1/Assets/Scenes/: SampleScene.unity
Project1/Assets/Script/: MovePlayerPosition.cs
Project1/Assets/Script/Buttons/: BlackButton.cs  DoorScript.cs  RedButton.cs  WhiteButton.cs
Project1/ProjectSettings/: ProjectSettings.asset  TagManager.asset
Project2/: README.md
Project2/WebGLViewer/: README.txt
Project2/WebGLViewer/GLV/: CAVE.js  DisplaySurface.js  GLV.Camera.js  GLV.GlMatrix.js  GLV.Input.js  GLV.Light.js  GLV.Material.js  GLV.ShaderManager.js  GLV.TextureManager.js
Project2/WebGLViewer/GLV/shaders/: cave.js  light.js  phong.js
Project2/WebGLViewer/libs/: webgl-utils.js
Project2/common/: displaysurface.cpp  displaysurface.h  point.cpp  point.h  vector.cpp  vector.h
Project2/ex1/: CMakeLists.txt  ejecuta  main.cpp  matrix.cpp  matrix.h
Project2/ex2/: CMakeLists.txt  main.cpp
Rooms/ProjectSettings/: ProjectSettings.asset
